--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -4,6 +4,7 @@
   <package id="BenchmarkDotNet" version="0.10.10" targetFramework="net462" />
   <package id="BenchmarkDotNet.Core" version="0.10.10" targetFramework="net462" />
   <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.10" targetFramework="net462" />
+  <package id="CS-Script.bin" version="3.25.1.0" targetFramework="net462" />
   <package id="Dapper" version="1.50.4-alpha1-00070" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Iesi.Collections" version="4.0.2" targetFramework="net462" />
@@ -12,6 +13,8 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.4.0" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net462" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.3" targetFramework="net462" />
@@ -111,4 +114,8 @@
   <package id="System.Xml.XmlSerializer" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="Tortuga.Anchor" version="1.2.6283.989" targetFramework="net462" />
+  <package id="Tortuga.Chain.CompiledMaterializers" version="1.1.6311.38009" targetFramework="net462" />
+  <package id="Tortuga.Chain.Core" version="1.1.6458.19749" targetFramework="net462" />
+  <package id="Tortuga.Chain.SqlServer" version="1.1.6458.20569" targetFramework="net462" />
 </packages>
