--- a/RawBencher/App.config
+++ b/RawBencher/App.config
@@ -95,6 +95,10 @@
         <assemblyIdentity name="Tortuga.Chain.Core" publicKeyToken="8769fd32a2872cf0" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.6536.42705" newVersion="1.2.6536.42705" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CSScriptLibrary" publicKeyToken="70fcc3d18c749033" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.27.2.0" newVersion="3.27.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
