--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -4,12 +4,12 @@
   <package id="BenchmarkDotNet" version="0.10.10" targetFramework="net462" />
   <package id="BenchmarkDotNet.Core" version="0.10.10" targetFramework="net462" />
   <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.10" targetFramework="net462" />
-  <package id="CS-Script.bin" version="3.25.1.0" targetFramework="net462" />
-  <package id="Dapper" version="1.50.4-alpha1-00070" targetFramework="net462" />
+  <package id="CS-Script.bin" version="3.27.2.0" targetFramework="net462" />
+  <package id="Dapper" version="1.50.4" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Iesi.Collections" version="4.0.2" targetFramework="net462" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
-  <package id="linq2db" version="1.10.0" targetFramework="net462" />
+  <package id="linq2db" version="1.10.1" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net462" />
@@ -41,7 +41,7 @@
   <package id="NPoco" version="3.9.2" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.1.2" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net462" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.1" targetFramework="net462" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.2-hotfix-20171127" targetFramework="net462" />
   <package id="ServiceStack.Common" version="4.5.14" targetFramework="net462" />
   <package id="ServiceStack.Interfaces" version="4.5.14" targetFramework="net462" />
   <package id="ServiceStack.OrmLite" version="4.5.14" targetFramework="net462" />
@@ -117,5 +117,5 @@
   <package id="Tortuga.Anchor" version="1.2.6283.989" targetFramework="net462" />
   <package id="Tortuga.Chain.CompiledMaterializers" version="1.1.6311.38009" targetFramework="net462" />
   <package id="Tortuga.Chain.Core" version="1.2.6536.42693" targetFramework="net462" />
-  <package id="Tortuga.Chain.SqlServer" version="1.1.6448.18522" targetFramework="net462" />
+  <package id="Tortuga.Chain.SqlServer" version="1.1.6458.20569" targetFramework="net462" />
 </packages>
