--- a/LLBLGen53/AdventureWorks.Dal.Adapter.v53DBSpecific.csproj
+++ b/LLBLGen53/AdventureWorks.Dal.Adapter.v53DBSpecific.csproj
@@ -32,15 +32,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.SqlServer.Types, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91">
-      <HintPath>..\packages\Microsoft.SqlServer.Types.14.0.314.76\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
+    <Reference Include="Microsoft.SqlServer.Types, Version=13.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ReferencedAssemblies\Microsoft.SqlServer.Types.dll</HintPath>
     </Reference>
     <Reference Include="SD.LLBLGen.Pro.DQE.SqlServer, Version=5.3.0.0, Culture=neutral, PublicKeyToken=ca73b74ba4e3ff27, processorArchitecture=MSIL">
-      <HintPath>..\packages\SD.LLBLGen.Pro.DQE.SqlServer.5.3.1\lib\net452\SD.LLBLGen.Pro.DQE.SqlServer.dll</HintPath>
+      <HintPath>..\packages\SD.LLBLGen.Pro.DQE.SqlServer.5.3.2-hotfix-20171127\lib\net452\SD.LLBLGen.Pro.DQE.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="SD.LLBLGen.Pro.ORMSupportClasses, Version=5.3.0.0, Culture=neutral, PublicKeyToken=ca73b74ba4e3ff27, processorArchitecture=MSIL">
-      <HintPath>..\packages\SD.LLBLGen.Pro.ORMSupportClasses.5.3.1\lib\net452\SD.LLBLGen.Pro.ORMSupportClasses.dll</HintPath>
+      <HintPath>..\packages\SD.LLBLGen.Pro.ORMSupportClasses.5.3.2-hotfix-20171127\lib\net452\SD.LLBLGen.Pro.ORMSupportClasses.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -55,7 +56,6 @@
     <Compile Include="DatabaseSpecific\ActionProcedures.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="SqlServerTypes\Loader.cs" />
     <None Include="DatabaseSpecific\App.config">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </None>
@@ -72,7 +72,6 @@
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
     <None Include="packages.config" />
-    <None Include="SqlServerTypes\readme.htm" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSHARP.Targets" />
   <PropertyGroup>
