--- a/LLBLGen53/packages.config
+++ b/LLBLGen53/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net461" />
-  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.3.1" targetFramework="net462" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.1" targetFramework="net462" />
+  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.3.2-hotfix-20171127" targetFramework="net462" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.2-hotfix-20171127" targetFramework="net462" />
 </packages>
