Updates to latest version, llblgen pro v5.3.3 latest hotfix

--- a/EFCore2.0/Persistence/app.config
+++ b/EFCore2.0/Persistence/app.config
@@ -1,7 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<connectionStrings>
 		<!-- please adjust the connection string embedded in the element below to target the proper catalog / server using the proper user / password combination -->
 		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="data source=win2008sql2012\sqlexpress;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient" />
 	</connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SqlClient" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration> 
