--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,23 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net462" />
-  <package id="BenchmarkDotNet" version="0.10.10" targetFramework="net462" />
-  <package id="BenchmarkDotNet.Core" version="0.10.10" targetFramework="net462" />
-  <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.10" targetFramework="net462" />
-  <package id="CS-Script.bin" version="3.27.2.0" targetFramework="net462" />
+  <package id="BenchmarkDotNet" version="0.10.12" targetFramework="net462" />
+  <package id="BenchmarkDotNet.Core" version="0.10.12" targetFramework="net462" />
+  <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.12" targetFramework="net462" />
+  <package id="CS-Script.bin" version="3.28.0.0" targetFramework="net462" />
   <package id="Dapper" version="1.50.4" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
-  <package id="Iesi.Collections" version="4.0.2" targetFramework="net462" />
+  <package id="Iesi.Collections" version="4.0.3" targetFramework="net462" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
-  <package id="linq2db" version="1.10.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.4.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.4.0" targetFramework="net462" />
-  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net462" />
+  <package id="linq2db" version="1.10.2" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.6.1" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.6.1" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net462" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.3" targetFramework="net462" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.4" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore" version="2.0.1" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="2.0.1" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.0.1" targetFramework="net462" />
@@ -37,26 +37,26 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Registry" version="4.4.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="net462" />
-  <package id="NHibernate" version="5.0.1" targetFramework="net462" />
-  <package id="NPoco" version="3.9.2" targetFramework="net462" />
+  <package id="NHibernate" version="5.0.3" targetFramework="net462" />
+  <package id="NPoco" version="3.9.3" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.1.2" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net462" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.2-hotfix-20171127" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="4.5.14" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="4.5.14" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="4.5.14" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite.SqlServer" version="4.5.14" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="4.5.14" targetFramework="net462" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.3-hotfix-20180129" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="5.0.2" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="5.0.2" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.0.2" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="5.0.2" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.0.2" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net462" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
-  <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net462" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net462" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
-  <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net462" />
+  <package id="System.Data.SqlClient" version="4.4.2" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net462" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
@@ -91,12 +91,12 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.AccessControl" version="4.4.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="4.4.1" targetFramework="net462" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
-  <package id="System.Security.Principal.Windows" version="4.4.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="4.4.1" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.4.0" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
@@ -108,7 +108,7 @@
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XmlSerializer" version="4.3.0" targetFramework="net462" />
@@ -116,6 +116,6 @@
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="Tortuga.Anchor" version="1.2.6283.989" targetFramework="net462" />
   <package id="Tortuga.Chain.CompiledMaterializers" version="1.1.6311.38009" targetFramework="net462" />
-  <package id="Tortuga.Chain.Core" version="1.2.6536.42693" targetFramework="net462" />
-  <package id="Tortuga.Chain.SqlServer" version="1.1.6458.20569" targetFramework="net462" />
+  <package id="Tortuga.Chain.Core" version="1.2.6563.39715" targetFramework="net462" />
+  <package id="Tortuga.Chain.SqlServer" version="1.2.6553.39547" targetFramework="net462" />
 </packages>
