Added Kros.KORM bencher.

--- a/RawBencher/App.config
+++ b/RawBencher/App.config
@@ -8,7 +8,7 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 
 
-		
+
 	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -23,8 +23,8 @@
 		<!--
 			 Please adjust the connection string embedded in the element below to target the proper catalog / server using the proper user / password combination
 			 If you use a differently named adventure works database, be sure to change the initial catalog descriptions in the connection strings below.
-			 The extra connection string for telerik Fluent is required as the OpenAccess runtime used in the other telerik bencher caches metadata 
-			 related to the connection string so the fluent one will crash if it doesn't use its own connection string. 
+			 The extra connection string for telerik Fluent is required as the OpenAccess runtime used in the other telerik bencher caches metadata
+			 related to the connection string so the fluent one will crash if it doesn't use its own connection string.
 		-->
 
 		<!-- note: for CoreCLR the connection string is currently hard coded in the app-code; see Program.cs for reasons -->
@@ -101,7 +101,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Data.SqlClient" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+        <bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Xml.ReaderWriter" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
