--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -9,6 +9,8 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Iesi.Collections" version="4.0.3" targetFramework="net462" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
+  <package id="Kros.KORM" version="3.7.0" targetFramework="net462" />
+  <package id="Kros.Utils" version="1.7.0" targetFramework="net462" />
   <package id="linq2db" version="1.10.2" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net462" />
@@ -56,7 +58,7 @@
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
-  <package id="System.Data.SqlClient" version="4.4.2" targetFramework="net462" />
+  <package id="System.Data.SqlClient" version="4.5.0" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net462" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
@@ -80,6 +82,7 @@
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.5.0" targetFramework="net462" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
@@ -107,7 +110,7 @@
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
