Added support for RepoDb. A dynamic, lightweight, and fast repository-based .Net ORM library.

--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -41,6 +41,7 @@
   <package id="NPoco" version="3.9.4" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net462" />
+  <package id="RepoDb" version="1.5.3" targetFramework="net462" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.3-hotfix-20180129" targetFramework="net462" />
   <package id="ServiceStack.Common" version="5.1.0" targetFramework="net462" />
   <package id="ServiceStack.Interfaces" version="5.1.0" targetFramework="net462" />
